--- a/UserInfo/res/values/strings.xml
+++ b/UserInfo/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
 
     <string name="app_name">UserInfo</string>
+    <string name="user">Get User Details</string>
+    
 
 </resources>
