optional menu is also created

--- a/SimpleProgressBarActivity/res/values/strings.xml
+++ b/SimpleProgressBarActivity/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="event_des">Event Description</string>
     <string name="contacts_label">Contacts Activity</string>
     <string name="existing_msg">Your contact list has been updated</string>
+    <string name="new_msg">Contact created successfully</string>
     <string name="menu_des">MenuStyle Activity</string>
     <string name="stream">Enter Your Stream</string>
     <string name="date">Set Date</string>
@@ -25,6 +26,13 @@
     <string name="call">Call</string>
       <string name="calling">Calling....</string>
     <string name="sms">SMS</string>
+    <string name="bluetooth">Bluetooth</string>
+    <string name="display_msg">You have selected </string>
+    <string name="baterry">Baterry Updater</string>
+    <string name="data_pack">Data Connection</string>
+    <string name="profile">Profile</string>
+    <string name="wifi">wifi</string>
+    <string name="gps">GPS</string>
     <string name="event_name">Enter Your EventName!</string>
 
 </resources>
