--- a/DatabaseDemoApplication/res/values/strings.xml
+++ b/DatabaseDemoApplication/res/values/strings.xml
@@ -7,7 +7,10 @@
     <string name="email_hint">Enter Email ID !</string>
      <string name="login">Login</string>
       <string name="null_msg">Don\'t leave any fields empty</string>
+          <string name="row_insert_msg">Row inserted successfully</string>
      <string name="newUser">New User?</string>
       <string name="cancel">Cancel</string>
+      <string name="alluser">All Users</string>
+      <string name="displayActivity">PersonsDetails Activity</string>
 
 </resources>
