--- a/LoginDemo/res/values/strings.xml
+++ b/LoginDemo/res/values/strings.xml
@@ -2,6 +2,7 @@
 
     <string name="app_name">LoginDemo</string>
     <string name="user_hint">Enter UserName!</string>
+    <string name="title">User Credentials</string>
     <string name="pwd_hint">Enter Password!</string>
     <string name="login">Log In</string>
     <string name="cancel">Cancel</string>
