--- a/LoginDemo/res/values/strings.xml
+++ b/LoginDemo/res/values/strings.xml
@@ -6,5 +6,11 @@
     <string name="pwd_hint">Enter Password!</string>
     <string name="login">Log In</string>
     <string name="cancel">Cancel</string>
+     <string name="sucess">Logedd in successfully</string>
+    <string name="failure">Both fields null,Failed to login</string>
+    <string name="user_null">Username Shouldn\'t be null</string>
+    <string name="pwd_null">Password Shouldn\'t be null</string>
+    <string name="invalid_user">Invalid UserName</string>
+    <string name="invalid_pwd">Invalid Password</string>
 
 </resources>
