--- a/SampleDemo/res/values/strings.xml
+++ b/SampleDemo/res/values/strings.xml
@@ -2,8 +2,10 @@
 
     <string name="app_name">SampleDemo</string>
     <string name="share">Share list</string>
+    <string name="item_select_msg">Item Selected</string>
     <string name="add_item">Add items</string>
     <string name="other_options">Other options</string>
-<string name="action_settings">Settings</string>
-<string name="action_show_list">Show list</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_show_list">Custom list item</string>
+
 </resources>
